front middle back flow check